Fixed Nav padding and z-index

--- a/source/stylesheets/layouts/_header.scss
+++ b/source/stylesheets/layouts/_header.scss
@@ -1,6 +1,6 @@
 .MainHeader{
   position: relative;
-  z-index: 3;
+  z-index: 20;
   display: flex;
   align-items: center;
   padding-top: 40px;
